--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.3.0",
     "framer-motion": "^11.11.10",
     "gsap": "^3.12.5",
     "html-react-parser": "^5.1.18",
