--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "14.2.16",
     "next-auth": "5.0.0-beta.25",
     "next-cloudinary": "^6.16.0",
+    "next-recaptcha-v3": "^1.5.2",
     "nextjs-toploader": "^3.7.15",
     "react": "^18",
     "react-dom": "^18",
