--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,12 @@
       "@website/*": ["./src/app/(website)/*"],
       "@dashboard/*": ["./src/app/(dashboard)/*"],
       "@public/*": ["./public/*"],
-      "@core/*": ["./src/@core/*"],
+      "@core/*": ["src/@core/*"],
       "@web-components/*": ["./src/app/(website)/components/*"],
-      "@core-types/*": ["./src/@core/types/*"],
+      "@core-types/*": ["src/@core/types/*"],
       "@app-types/*": ["./src/app/types/*"],
       "@global-types/*": ["./src/types/*"],
-      "@shared/*": ["./src/shared/*"]
+      "@shared/*": ["src/app/shared/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
