--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@floating-ui/react": "^0.26.25",
     "@headlessui/react": "^2.2.0",
     "@radix-ui/react-separator": "^1.1.0",
@@ -17,7 +19,9 @@
     "@stripe/stripe-js": "^5.2.0",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tailwindcss/container-queries": "^0.1.1",
+    "@tanstack/react-table": "^8.20.6",
     "@uploadthing/react": "^7.1.3",
+    "ahooks": "^3.8.4",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -35,7 +39,10 @@
     "next-recaptcha-v3": "^1.5.2",
     "nextjs-toploader": "^3.7.15",
     "pretty-bytes": "^6.1.1",
+    "rc-pagination": "^5.0.0",
+    "rc-table": "^7.49.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
@@ -44,6 +51,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-quill": "^2.0.0",
     "react-use": "^17.5.1",
+    "recharts": "^2.15.0",
     "rizzui": "^0.8.7",
     "simplebar-react": "^3.2.6",
     "tailwind-merge": "^2.5.4",
