user register , junkcart

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@floating-ui/react": "^0.26.25",
     "@headlessui/react": "^2.2.0",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@stripe/react-stripe-js": "^3.0.0",
     "@stripe/stripe-js": "^5.2.0",
     "@t3-oss/env-nextjs": "^0.11.1",
@@ -26,6 +26,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookies-next": "^4.3.0",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.11.10",
     "gsap": "^3.12.5",
     "html-react-parser": "^5.1.18",
