--- a/.env.local
+++ b/.env.local
@@ -3,11 +3,13 @@
     NEXT_PUBLIC_ADMIN_DASHBOARD_URI="https://dashboard-adaired.vercel.app/auth/login"
 
 # BHW Website
-    NEXT_PUBLIC_BASE_PATHNAME="/ecommerce"
+    NEXT_PUBLIC_BASE_PATHNAME="/expert-content-solutions"
 
 # Backend API Endpoints
     NEXT_PUBLIC_OLD_API_URI="https://demo.adaired.com/webapp"
-    NEXT_PUBLIC_BACKEND_API_URI="http://localhost:5000/api/v2"
+    # NEXT_PUBLIC_BACKEND_API_URI="http://localhost:5000/api/v2"
+        NEXT_PUBLIC_BACKEND_API_URI="https://backend.adaired.com/backend_v2/api/v2"
+
 
 # Images API Endpoints
     NEXT_PUBLIC_IMG_URL="https://demo.adaired.com/webapp/"
