--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "redirects": [
       {
-        "source": "/dashboard",
+        "source": "/admin-dashboard",
         "destination": "https://dashboard-adaired.vercel.app/auth/login",
         "permanent": true
       }
