--- a/.env.local
+++ b/.env.local
@@ -7,8 +7,8 @@
 
 # Backend API Endpoints
     NEXT_PUBLIC_OLD_API_URI="https://demo.adaired.com/webapp"
-    # NEXT_PUBLIC_BACKEND_API_URI="http://localhost:5000/api/v2"
-    NEXT_PUBLIC_BACKEND_API_URI="https://backend.adaired.com/backend_v2/api/v2"
+    NEXT_PUBLIC_BACKEND_API_URI="http://localhost:5000/api/v2"
+    # NEXT_PUBLIC_BACKEND_API_URI="https://backend.adaired.com/backend_v2/api/v2"
 
 
 # Images API Endpoints
