New Schema added

--- a/.env.local
+++ b/.env.local
@@ -43,6 +43,6 @@
 # Auth tokens
     NEXTAUTH_URL="http://localhost:3000"
     AUTH_SECRET="fake_secret_key_123456789"
-    AUTH_GOOGLE_ID="204977002156-uqe7io0u1sp5k3cnb6dqj40jgdco4krl.apps.googleusercontent.com"
-    AUTH_GOOGLE_SECRET="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"
+    AUTH_GOOGLE_CLIENT_ID="674907966532-osflufen2uofkv54qoahcesqlsd315s0.apps.googleusercontent.com"
+    AUTH_GOOGLE_CLIENT_SECRET="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"
     NEXT_PUBLIC_GOOGLE_MAP_API_KEY="AIzaSyD-FakeKey12345ForTesting-Abcdefg"
