--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "rc-pagination": "^5.0.0",
     "rc-table": "^7.49.0",
     "react": "^18.3.1",
+    "react-animated-cursor": "^2.11.2",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
