--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next-cloudinary": "^6.16.0",
     "next-recaptcha-v3": "^1.5.2",
     "nextjs-toploader": "^3.7.15",
+    "nodemailer": "^6.10.0",
     "pretty-bytes": "^6.1.1",
     "rc-pagination": "^5.0.0",
     "rc-table": "^7.49.0",
@@ -75,6 +76,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@types/lodash": "^4.17.12",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
