--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "react-quill": "^2.0.0",
     "react-use": "^17.5.1",
     "recharts": "^2.15.0",
+    "resend": "^4.2.0",
     "rizzui": "^0.8.7",
+    "sharp": "^0.33.5",
     "simplebar-react": "^3.2.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
