--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "rizzui": "^0.8.7",
     "sharp": "^0.33.5",
     "simplebar-react": "^3.2.6",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.4.1",
