--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nextjs-toploader": "^3.7.15",
     "nodemailer": "^6.10.0",
     "pretty-bytes": "^6.1.1",
+    "qrcode.react": "^4.2.0",
     "rc-pagination": "^5.0.0",
     "rc-table": "^7.49.0",
     "react": "^18.3.1",
@@ -59,6 +60,7 @@
     "react-icons": "^5.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-quill": "^2.0.0",
+    "react-to-print": "^3.1.0",
     "react-use": "^17.5.1",
     "recharts": "^2.15.0",
     "resend": "^4.2.0",
