[Update] - Added Google OAuth

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,9 +28,15 @@
       "@app-types/*": ["./src/app/types/*"],
       "@global-types/*": ["./src/types/*"],
       "@shared/*": ["./src/app/shared/*"],
-      "@root/*": ["./src/*"],
+      "@root/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "types/**/*.d.ts",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": ["node_modules", ".next"]
 }
