--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "^11.18.2",
     "gsap": "^3.13.0",
     "html-react-parser": "^5.2.5",
+    "jose": "^6.0.12",
     "jotai": "^2.12.5",
     "lenis": "^1.3.4",
     "lodash": "^4.17.21",
