--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.3",
     "uuid": "^11.1.0",
+    "vanilla-cookieconsent": "3.1.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
