--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.21",
+    "code-narrator": "^1.0.17",
     "dayjs": "^1.11.13",
     "eslint": "^9.29.0",
     "eslint-config-next": "15.1.2",
