--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "console": "^0.7.2",
     "cookies-next": "^4.3.0",
+    "country-list-with-dial-code-and-flag": "^5.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.18.2",
@@ -71,6 +72,7 @@
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "twemoji": "^14.0.2",
     "uploadthing": "^7.7.3",
     "uuid": "^11.1.0",
     "vanilla-cookieconsent": "3.1.0",
